--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "slugify": "^1.6.6",
     "stripe": "^12.16.0",
     "tailwindcss": "3.3.3"
   }
